tests/invalid_typecheck/test_tc_assign_to_array_name.aphi
int[3] A;
int X;

procedure main {
    X = 5;
    A = X;
}
